Add dockerfile testing

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,14 @@
 ---
 version: 2
 updates:
+  - package-ecosystem: "docker"
+    directory: "/TestDockerFiles"
+    schedule:
+      interval: "weekly"
+  - package-ecosystem: "pip"
+    directory: "/TestDockerFiles"
+    schedule:
+      interval: "weekly"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
