--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,13 +9,17 @@ registries:
     password: ${{ secrets.SFBRDEV_ACCESS_KEY }}
 updates:
   - package-ecosystem: "docker"
+    registries:
+      - sfbrdevhelmweacr
     directory: "/TestDockerFiles"
     schedule:
-      interval: "daily"
+      interval: "cron"
+      cronjob: "0 5 * * *"
   - package-ecosystem: "pip"
     directory: "/TestDockerFiles"
     schedule:
-      interval: "daily"
+      interval: "cron"
+      cronjob: "0 5 * * *"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
