Add Mazewalk registry

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,19 +13,23 @@ registries:
     url: sfbrdevhelmweacr.azurecr.io
     username: ${{ secrets.SFBRDEV_CLIENT_ID }}
     password: ${{ secrets.SFBRDEV_ACCESS_KEY }}
+  mzwkossalpweacr:
+    type: docker-registry
+    url: mzwkossalpweacr.azurecr.io
+    username: ${{ secrets.MZWKOS_CLIENT_ID }}
+    password: ${{ secrets.MZWKOS_ACCESS_KEY }}
 updates:
   - package-ecosystem: "docker"
     registries:
-      - sfbrdevhelmweacr
+      - mzwkossalpweacr
     directories: 
       - "/TestDockerFiles"
       - "/TestDockerFiles/admctl-webhook"
       - "/TestDockerFiles/cert-injector-webhook"
       - "/TestDockerFiles/cert-injector-webhook/cert-trustor/debian"
       - "/TestDockerFiles/cert-injector-webhook/cert-trustor/rhel"
-    schedule:
-      interval: "cron"
-      cronjob: "0 17 * * *"
+    patterns: ["*"]
+    multi-ecosystem-group: "uipath"
   - package-ecosystem: "pip"
     directory: "/TestDockerFiles"
     patterns: ["*"]
